--- a/14-08/index.html
+++ b/14-08/index.html
@@ -19,6 +19,22 @@
 
             <label for="data_nasc">Data de nascimento:</label>
             <input type="date" id="data_nasc">
+        </fieldset>
+
+        <fieldset>
+            <legend>Preferências</legend>
+            <h3>Prefiro:</h3>
+
+            <input type="radio" name="comida" value="Feijoada">Feijoada
+            <input type="radio" name="comida" value="Macarronada">Macarronada
+            <input type="radio" name="comida" value="Sushi">Sushi
+
+            <h3>Coisas que eu gosto de fazer:</h3>
+            <input type="checkbox" name="op1" value="Ler">Ler
+            <input type="checkbox" name="op2" value="Escrever">Escrever
+
+            <h3>Fale sobre você:</h3>
+            <textarea name="txtsobremim" id="txtsobremim" cols="30" rows="10"></textarea>
 
         </fieldset>
     </form>
