--- a/correção exercício tags básicas/index.html
+++ b/correção exercício tags básicas/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <hr>
-    <p>Hoje 17 de Outubro de 2022.</p>
-    <hr>
-    <p>Temos atividades assíncronas para realizar.</p>
-    <hr>
-    <p>O Html é uma linguagem de marcação de hipertexto.</p>
-    <p>É baseada em tags para marcação do conteúdo.</p>
-    <hr>
 
-    <input type="password" name="" id="">
+<body>
+    <table border="1px"><!--Tabela-->
+        <thead><!--cabeçalho-->
+            <tr>
+                <th>Marca:</th>
+                <th>Modelo:</th>
+                <th>Ano:</th>
+                <th>Valor:</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><!--Linha-->
+                <td>Volkswagem</td><!--Coluna-->
+                <td>Golf</td>
+                <td>2009</td>
+                <td>R$38.500</td>
+            </tr>
+            <tr>
+                <td>Fiat</td>
+                <td>Palio</td>
+                <td>2010</td>
+                <td>R$61500</td>
+            </tr>
+        </tbody>
+        <tfooter>
+            <tr>
+                <td colspan="4">O melhor preço da região!</td>
+            </tr>
+        </tfooter>
+    </table>
+
 
 </body>
+
 </html>
