--- a/03-10/index.html
+++ b/03-10/index.html
@@ -14,11 +14,31 @@
         #container{
             background-color: #000;
             display: flex;
-            flex-direction: row;
+            flex-direction: row-reverse;
             justify-content: space-between;
             align-items: center;
             color: white;
+            height: 60px;
+            padding: 10px 20px;
 
+        }
+
+        a{
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.2rem;
+            padding: 20px;
+        }
+
+        button{
+            background-color: rgb(117, 175, 230);
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        p{
+            font-size: 1.3rem;
+            font-weight: bolder;
         }
     </style>
 </head>
@@ -29,8 +49,8 @@
             <a href="#">Home</a>
             <a href="#">Sobre</a>
             <a href="#">Serviços</a>
+            <button>Contato</button>
         </nav>
-        <button>Contato</button>
     </header>
 </body>
 </html>
